Add socket 聊天室功能

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 		<link href="/js/css/styles.css" rel="stylesheet">
 		<title></title>
 		<style>
@@ -70,6 +71,7 @@
         </div>
 		<!--兼容IE8以上-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.34.2/es6-shim.min.js"></script>
+		<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
         <!--<script src="/js/libs.bundle.js"></script>-->
         <!--<script src="/js/vendor.bundle.js"></script>-->
 		<script src="/js/bundle.js"></script>
